Correction graph des auteurs invisible

--- a/css/stats.css
+++ b/css/stats.css
@@ -19,6 +19,11 @@
     background-color: white;
 }
 
+.graph_auteurs {
+    width: 100% !important;
+    height: 500px !important;
+}
+
 #suggestions ul.liste_histoires {
     margin: 0;
 }
